--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
       </div>
-      <img src="img/graphic_black_mountains.png" class="img-fluid" alt="">
+      <!-- <img src="img/graphic_black_mountains.png" class="img-fluid" alt=""> -->
 
     </div>
   </section>
