--- a/index.html
+++ b/index.html
@@ -80,6 +80,25 @@
     </div>
   </section>
 
+
+
+  <style>
+.zoom {
+  padding: 50px;
+  background-color: green;
+  transition: transform .2s; /* Animation */
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+</style>
+
+<div class="zoom"></div>
+
   <!-- Projects Section -->
   <section id="projects" class="projects-section bg-light">
     <div class="container">
