--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 .zoom {
   padding: 50px;
   background-color: green;
-  transition: transform .2s; /* Animation */
+  transition: transform 1s; /* Animation */
   width: 200px;
   height: 200px;
   margin: 0 auto;
