--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="col-lg-8 mx-auto">
 
           <h2 class="text-white mb-4">WE WILL DELIVER YOU AN EXPERIENCE THAT YOU’LL NEVER FORGET</h2>
-          <p class="text-white-50">We climb mountains with some amazing people, would you like to join them? We know that a group of people who work together are not a team, our data driven mountain packages expose team blind spots and encourage accelorated growth to match your business needs.</p>
+          <p class="text-white-50">A group of people who work together are not a team, our unique approach combining data science and mountain experiences expose team blind spots and encourage accelorated growth to match your business needs. We climb mountains with amazing people, would you like to join them? </p>
 
 
         </div>
@@ -80,22 +80,6 @@
     </div>
   </section>
 
-
-
-  <style>
-.zoom {
-  padding: 50px;
-  background-color: green;
-  transition: transform 1s; /* Animation */
-  width: 200px;
-  height: 200px;
-  margin: 0 auto;
-}
-
-.zoom:hover {
-  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-}
-</style>
 
 <div class="zoom"></div>
 
@@ -126,7 +110,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">About Our Clients</h4>
-                <p class="mb-0 text-white-50">“Fast moving highly motivated, individuals who are focused on goals, increasing knowledge and feel thier actions are helping to change The World.“</p>
+                <p class="mb-0 text-white-50">“Fast moving highly motivated, individuals who are focused on goals, increasing knowledge and feel thier actions are helping to change The World.“ <br> Does this describe you or your organisation? Yes? Then Limitless experiences are for you.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -143,8 +127,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
-                <h4 class="text-white">Data Driven Success</h4>
-                <p class="mb-0 text-white-50">The Limitless methordology is powered by data science, practical phychology, Jaharis window and packaged into the best all round corporate development package money can buy.</p>
+                <h4 class="text-white">Data Driven Success To Deliver Clear Return On Investment</h4>
+                <p class="mb-0 text-white-50">Remember a group of people are not a team! Our unique model combines data science and practical psychology to understand your organisations dynamic and develop you a package that will deliver clear statistical feedback and accelorate your culture.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
