--- a/limitless1.html
+++ b/limitless1.html
@@ -59,7 +59,7 @@
         <div class="col-lg-8 mx-auto">
 
           <h2 class="text-white mb-4">WELCOME TO STEP ONE</h2>
-          <p class="text-white-50">we have combined machine learning, mountain experiences and practical phychology to statistically measure your team. Please fill out the form below and agree to our GDPR stuff to be added!</p>
+          <p class="text-white-50">We have combined machine learning, mountain experiences and practical phychology to statistically measure your team. Please fill out the form below and agree to our GDPR stuff to be added!</p>
 
 
         </div>
