--- a/limitless1_report.html
+++ b/limitless1_report.html
@@ -56,12 +56,18 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-lg-8 mx-auto">
+        <!-- <div class="col-lg-8 mx-auto"> -->
 
           <h2 class="text-white mb-4">LIMITLESS #1 REPORT</h2>
 
+          <div class="container" align="center" >
+
+          <iframe width="1000" height="750" src="https://datastudio.google.com/embed/reporting/79e279e2-1f87-4a0c-a576-a03de62204af/page/bOi6" frameborder="0" style="border:0" allowfullscreen></iframe>
 
         </div>
+
+
+        <!-- </div> -->
 
       </div>
       <!-- <img src="img/graphic_black_mountains.png" class="img-fluid" alt=""> -->
@@ -69,12 +75,12 @@
     </div>
   </section>
   <!-- Projects Section -->
-    <div class="container" align="center">
+    <!-- <div class="container" align="center" >
       <iframe width="1000" height="750" src="https://datastudio.google.com/embed/reporting/79e279e2-1f87-4a0c-a576-a03de62204af/page/bOi6" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 
 
-    </div>
+    </div> -->
 
 
 
