spelling complete by Naomi

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">Limtless</h1>
+        <h1 class="mx-auto my-0 text-uppercase">Limitless</h1>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">We believe in challenging individuals and organisations that are shaping the world</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Learn More</a>
       </div>
@@ -70,8 +70,8 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
 
-          <h2 class="text-white mb-4">WE WILL DELIVER YOU AN EXPERIENCE THAT YOU’LL NEVER FORGET</h2>
-          <p class="text-white-50">A group of people who work together are not a team, our unique approach combining data science and mountain experiences expose team blind spots and encourage accelorated growth to match your business needs. We climb mountains with amazing people, would you like to join them? </p>
+          <h2 class="text-white mb-4">WE'LL DELIVER AN EXPERIENCE THAT YOU’LL NEVER FORGET</h2>
+          <p class="text-white-50">"Colleagues" aren't necessarily "Teammates". Our unique approach combines data science and mountain experiences, exposing blind spots and boosting team development to match your business needs. We leave with great individuals and return with amazing teams, would you like to join them? </p>
 
 
         </div>
@@ -136,8 +136,8 @@
           <div class="bg-black text-center h-100 project">
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
-                <h4 class="text-white">Accelorated Team Growth</h4>
-                <p class="mb-0 text-white-50">“Your challenge is to grow your team at a rate which matches your organisational growth. We Provide a limitless solution to help you achieve this.</p>
+                <h4 class="text-white">Accelerated Team Growth</h4>
+                <p class="mb-0 text-white-50">“A thriving organisation depends on a thriving team. Your challenge is to develop your people at a rate which matches your organisational growth objectives. We provide a limitless solution to help you achieve this.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -155,7 +155,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-right">
                 <h4 class="text-white">Data Driven Success To Deliver Clear Return On Investment</h4>
-                <p class="mb-0 text-white-50">Remember a group of people are not a team! Our unique model combines data science and practical psychology to understand your organisations dynamic and develop you a package that will deliver clear statistical feedback and accelorate your culture.</p>
+                <p class="mb-0 text-white-50">A group of people does not equal a team. Our unique model combines data science and practical psychology to understand your organisation's dynamic and develop a tailored package that will deliver clear, statistical feedback and strengthen your culture.</p>
                 <hr class="d-none d-lg-block mb-0 mr-0">
               </div>
             </div>
@@ -173,7 +173,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">About Our Clients</h4>
-                <p class="mb-0 text-white-50">“Fast moving highly motivated, individuals who are focused on goals, increasing knowledge and feel thier actions are helping to change The World.“ <br> Does this describe you or your organisation? Yes? Then Limitless experiences are for you.</p>
+                <p class="mb-0 text-white-50">“Fast moving, highly motivated individuals who are focused on achieving goals, increasing knowledge and changing the world.“ <br> Does this describe the people you want in your organisation? Yes? Then Limitless experiences are for you.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
@@ -192,7 +192,7 @@
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
             <h4>Accelorated Team Growth</h4>
-            <p class="text-black-50 mb-0">Your challenge is to grow your team at a rate which matches your organisational growth. We Provide a limitless solution to help you achieve this.</p>
+            <p class="text-black-50 mb-0">Your challenge is to grow your team at a rate which matches your organisational growth objectives. We provide a limitless solution to help you achieve this.</p>
           </div>
         </div>
       </div> -->
