--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Limitless</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">We believe in challenging individuals and organisations that are shaping the world</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">We believe in challenging and developing the individuals and organisations that are shaping the world</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Learn More</a>
       </div>
     </div>
@@ -71,7 +71,7 @@
         <div class="col-lg-8 mx-auto">
 
           <h2 class="text-white mb-4">WE'LL DELIVER AN EXPERIENCE THAT YOU’LL NEVER FORGET</h2>
-          <p class="text-white-50">"Colleagues" aren't necessarily "Teammates". Our unique approach combines data science and mountain experiences, exposing blind spots and boosting team development to match your business needs. We leave with great individuals and return with amazing teams, would you like to join them? </p>
+          <p class="text-white-50">Colleagues aren't necessarily teammates. Our unique approach combines data science and mountain experiences, exposing blind spots and boosting team development to match your business needs. We leave with great individuals and return with amazing teams. Would you like to join? </p>
 
 
         </div>
@@ -137,7 +137,7 @@
             <div class="d-flex h-100">
               <div class="project-text w-100 my-auto text-center text-lg-left">
                 <h4 class="text-white">Accelerated Team Growth</h4>
-                <p class="mb-0 text-white-50">“A thriving organisation depends on a thriving team. Your challenge is to develop your people at a rate which matches your organisational growth objectives. We provide a limitless solution to help you achieve this.</p>
+                <p class="mb-0 text-white-50">A thriving organisation depends on a thriving team. Your challenge is to develop your people at a rate which matches your organisational growth objectives. We provide a limitless solution to help you achieve this.</p>
                 <hr class="d-none d-lg-block mb-0 ml-0">
               </div>
             </div>
