--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">Limitless, Devizes Wiltshire...</div>
+              <div class="small text-black-50">Limitless Mountains, 4 Granary House, Winchester SO213FD</div>
             </div>
           </div>
         </div>
