--- a/questions.html
+++ b/questions.html
@@ -36,8 +36,8 @@
         </div>
       </div>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/3.0.2/firebase.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-analytics.js"></script>
     <script>
     $.fn.getFormData = function() {
       var fields = this.find('[name]');
