--- a/questions.html
+++ b/questions.html
@@ -57,7 +57,7 @@
       appId: "1:633198110973:web:e6da6e66627ef2f95b7694",
       measurementId: "G-QZMQRS7RTG"
     };
-      var fb = firebase.initializeApp(config);
+      var fb = firebase.initializeApp(firebaseConfig);
       var user_id;
       $('.submit').on('click', function (e) {
         e.preventDefault();
