--- a/firebasecontact-master 3/index.html
+++ b/firebasecontact-master 3/index.html
@@ -53,11 +53,7 @@
     </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.6.0/firebase-analytics.js"></script>
-  <script src="/main.js"></script>
-
-
+  <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
