--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,14 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="brand"><span>Acme</span> Web Design</h1>
+    <h1 class="brand"><span>LIMITLESS</span> MOUNTAINS</h1>
     <div class="wrapper">
       <div class="company-info">
-        <h3>Acme Web Design</h3>
+        <h3>CONTACT US</h3>
         <ul>
-          <li><i class="fa fa-road"></i> 44 Something st</li>
-          <li><i class="fa fa-phone"></i> (555) 555-5555</li>
-          <li><i class="fa fa-envelope"></i> test@acme.test</li>
+          <li><i class="fa fa-road"></i> 4 Granary House, Micheldever Stations, Winchester, so21 3fd</li>
+          <li><i class="fa fa-phone"></i> (+44)077387-37884</li>
+          <li><i class="fa fa-envelope"></i> team@limitlessmountains.com</li>
         </ul>
       </div>
       <div class="contact">
