--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a class="nav-link js-scroll-trigger" href="#projects">Experiences</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/contact.html">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
