test check boxes

--- a/simon.html
+++ b/simon.html
@@ -119,6 +119,8 @@
   </div>
 </div>
 
+
+
 <br>
 <p class="lead">Do you live by the company values?</p>
 <div class="input-group mb-3">
@@ -171,139 +173,202 @@
 <p>Low = 1 / High = 5 (Individuals don't trust one another, this would score a 1).</p>
 <br>
 <p class="lead">The team is united when challenged</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
-  </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">5</label>
 </div>
 
 <br>
+<br>
 <p class="lead">The team is empathetic when errors are made</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
-  </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">5</label>
+</div>
+
+<br>
 
 <br>
 <p class="lead">The team reveals the hidden talents of its members</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
-  </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">5</label>
+</div>
+
+<br>
 
 <br>
 <p class="lead">The team has skills it does not utilise</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
-  </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">5</label>
+</div>
+
+<br>
 
 <br>
 <p class="lead">Negativity within the team is cleanly addressed</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
-  </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">5</label>
+</div>
+
+<br>
 
 <br>
 <p class="lead">The team makes assumptions about members that are unfounded</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
-  </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">5</label>
+</div>
+
+<br>
 
 <br>
 <p class="lead">The team has a bright future ahead of it</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
-  </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">5</label>
 </div>
 
 <br>
-<p class="lead">The team celebrates its members</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
 
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
-  </div>
+<br>
+<p class="lead">The team celebrates its members</p>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
+  <label class="form-check-label" for="inlineRadio3">5</label>
+</div>
+
+<br>
 
 </center>
 </div>
