--- a/simon.html
+++ b/simon.html
@@ -198,24 +198,24 @@
 <br>
 <p class="lead">The team is empathetic when errors are made</p>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio1" value="option1">
   <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio2" value="option2">
   <label class="form-check-label" for="inlineRadio2">2</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+  <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio3" value="option3">
   <label class="form-check-label" for="inlineRadio3">3</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
-  <label class="form-check-label" for="inlineRadio3">4</label>
+  <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio4" value="option4">
+  <label class="form-check-label" for="inlineRadio4">4</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option4">
-  <label class="form-check-label" for="inlineRadio3">5</label>
+  <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="inlineRadio5" value="option4">
+  <label class="form-check-label" for="inlineRadio4">5</label>
 </div>
 
 <br>
