all radio buttons done

--- a/simon.html
+++ b/simon.html
@@ -746,28 +746,30 @@
 <br>
 <p class="lead">Team members collectively resolve problems</p>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="inlineRadio1" value="option1">
+  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="materialInline1" value="option1">
   <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="inlineRadio2" value="option2">
+  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="materialInline1" value="option2">
   <label class="form-check-label" for="inlineRadio2">2</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="inlineRadio3" value="option3">
+  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="materialInline1" value="option3">
   <label class="form-check-label" for="inlineRadio3">3</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="inlineRadio3" value="option4">
+  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="materialInline1" value="option4">
   <label class="form-check-label" for="inlineRadio3">4</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="inlineRadio3" value="option4">
+  <input class="form-check-input" type="radio" name="Team members collectively resolve problems" id="materialInline1" value="option4">
   <label class="form-check-label" for="inlineRadio3">5</label>
 </div>
 
 <br>
 <br>
+
+
 
 <div class="form-group ">
       <label for="inputEmail4">Please provide feedback about the Limitless mountains service</label>
