for working up to question 4

--- a/simon.html
+++ b/simon.html
@@ -105,7 +105,7 @@
 <br>
 <p class="lead">Do you believe in the company values?</p>
 <div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
+  <select class="custom-select" name="question1" id="inputGroupSelect01" required>
     <option selected>Choose...</option>
     <option value="1">1</option>
     <option value="2">2</option>
@@ -115,7 +115,7 @@
 
   </select>
   <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
+    <label class="input-group-text" for="inputGroupSelect01">Your Score</label>
   </div>
 </div>
 
@@ -124,7 +124,7 @@
 <br>
 <p class="lead">Do you live by the company values?</p>
 <div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
+  <select class="custom-select" name="question2" id="inputGroupSelect02" required>
     <option selected>Choose...</option>
     <option value="1">1</option>
     <option value="2">2</option>
@@ -134,14 +134,14 @@
 
   </select>
   <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
+    <label class="input-group-text" for="inputGroupSelect02">Your Score</label>
   </div>
 </div>
 
 <br>
 <p class="lead">Believe your team acts ethically?</p>
 <div class="input-group mb-3">
-  <select class="custom-select" name="result" id="inputGroupSelect03" required>
+  <select class="custom-select" name="question3" id="inputGroupSelect03" required>
     <option selected>Choose...</option>
     <option value="1">1</option>
     <option value="2">2</option>
@@ -172,26 +172,26 @@
 <p class="lead"><b>Section 2 - Score how much the following emotions exist in your team?</b></p>
 <p>Low = 1 / High = 5 (Individuals don't trust one another, this would score a 1).</p>
 <br>
-<p class="lead">The team is united when challenged</p>
+<p class="lead">Q4 - The team is united when challenged</p>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="The team is united when challenged" id="inlineRadio1" value="option1">
+  <input class="form-check-input" type="radio" name="question4" id="inlineRadio1" value="1">
   <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="The team is united when challenged" id="inlineRadio2" value="option2">
+  <input class="form-check-input" type="radio" name="question4" id="inlineRadio2" value="2">
   <label class="form-check-label" for="inlineRadio2">2</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="The team is united when challenged" id="inlineRadio3" value="option3">
+  <input class="form-check-input" type="radio" name="question4" id="inlineRadio3" value="3">
   <label class="form-check-label" for="inlineRadio3">3</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="The team is united when challenged" id="inlineRadio3" value="option4">
-  <label class="form-check-label" for="inlineRadio3">4</label>
+  <input class="form-check-input" type="radio" name="question4" id="inlineRadio4" value="4">
+  <label class="form-check-label" for="inlineRadio4">4</label>
 </div>
 <div class="form-check form-check-inline">
-  <input class="form-check-input" type="radio" name="The team is united when challenged" id="inlineRadio3" value="option4">
-  <label class="form-check-label" for="inlineRadio3">5</label>
+  <input class="form-check-input" type="radio" name="question4" id="inlineRadio5" value="5">
+  <label class="form-check-label" for="inlineRadio5">5</label>
 </div>
 
 <br>
