--- a/simon.html
+++ b/simon.html
@@ -71,7 +71,7 @@
 
       <div class="form-group ">
             <label for="inputEmail4">Your First Name</label>
-            <input type="first_name" name="first_name" id="first_name" class="form-control" id="inputPhone" placeholder="Enter your first name">
+            <input type="first_name" name="first_name" id="first_name" class="form-control" id="inputName1" placeholder="Enter your first name">
           </div>
 
       <div class="form-group ">
@@ -82,7 +82,7 @@
 
           <div class="form-group ">
                 <label for="inputEmail4">Phone</label>
-                <input type="tel" name="tel" id="tel" class="form-control" id="inputPhone" placeholder="Mobile Number">
+                <input type="tel" name="tel" id="tel" class="form-control" id="inputPhone1" placeholder="Mobile Number">
               </div>
     </div>
     <div class="col-sm">
@@ -771,7 +771,7 @@
 
 <div class="form-group ">
       <label for="inputEmail4">Please provide feedback about the Limitless mountains service</label>
-      <input type="feedback_text" name="feedback_text" id="feedback_text" class="form-control" id="inputPhone" placeholder="Please enter feedback">
+      <input type="feedback_text" name="feedback_text" id="feedback_text" class="form-control" id="inputName2" placeholder="Please enter feedback">
     </div>
 
 </center>
