Fully working form
Now time to do auth

--- a/simon.html
+++ b/simon.html
@@ -71,7 +71,7 @@
 
       <div class="form-group ">
             <label for="inputEmail4">Your First Name</label>
-            <input type="first_name" name="first_name" id="first_name" class="form-control" id="inputName1" placeholder="Enter your first name">
+            <input type="name" name="name" id="name" class="form-control" id="inputName1" placeholder="Enter your first name">
           </div>
 <!--  -->
       <div class="form-group ">
@@ -105,7 +105,7 @@
 <br>
 <p class="lead">Do you believe in the company values?</p>
 <div class="input-group mb-3">
-  <select class="custom-select" name="question1" id="inputGroupSelect01" required>
+  <select class="custom-select" name="question1" id="inputGroupSelect01" >
     <option selected>Choose...</option>
     <option value="1">1</option>
     <option value="2">2</option>
@@ -124,7 +124,7 @@
 <br>
 <p class="lead">Do you live by the company values?</p>
 <div class="input-group mb-3">
-  <select class="custom-select" name="question2" id="inputGroupSelect02" required>
+  <select class="custom-select" name="question2" id="inputGroupSelect02" >
     <option selected>Choose...</option>
     <option value="1">1</option>
     <option value="2">2</option>
@@ -141,7 +141,7 @@
 <br>
 <p class="lead">Believe your team acts ethically?</p>
 <div class="input-group mb-3">
-  <select class="custom-select" name="question3" id="inputGroupSelect03" required>
+  <select class="custom-select" name="question3" id="inputGroupSelect03" >
     <option selected>Choose...</option>
     <option value="1">1</option>
     <option value="2">2</option>
@@ -771,7 +771,7 @@
 
 <div class="form-group ">
       <label for="inputEmail4">Please provide feedback about the Limitless mountains service</label>
-      <input type="feedback_text" name="feedback_text" id="feedback_text" class="form-control" id="inputName2" placeholder="Please enter feedback">
+      <input type="feedback" name="feedback" id="feedback" class="form-control" id="inputName2" placeholder="Please enter feedback">
     </div>
 
 </center>
@@ -785,7 +785,7 @@
 
       <div class="form-group">
           <div class="form-check">
-            <input class="form-check-input" name"check_box" value"I AGREE" type="checkbox" id="gridCheck" required>
+            <input class="form-check-input" name"agree" id="agree" value"I AGREE" type="checkbox" id="gridCheck" required>
             <label class="form-check-label" for="gridCheck">
               I hear-by give my consent for my information to be used as per the <a href="https://www.limitlessmountains.com/Privacy_Policy.pdf">Privacy Policy</a> and agree to the Limitless Mountains <a href="https://www.limitlessmountains.com/Terms_and_conditions.pdf">Terms and Conditions</a>.
             </label>
