--- a/x1.html
+++ b/x1.html
@@ -104,60 +104,87 @@
 <p>Low = 1 / High = 5</p>
 <br>
 <p class="lead">Do you believe in the company values?</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="question1" id="inputGroupSelect01" >
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect01">Your Score</label>
-  </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question1" id="inlineRadio1" value="1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question1" id="inlineRadio2" value="2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question1" id="inlineRadio3" value="3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question1" id="inlineRadio4" value="4">
+  <label class="form-check-label" for="inlineRadio4">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question1" id="inlineRadio5" value="5">
+  <label class="form-check-label" for="inlineRadio5">5</label>
+</div>
+
+<br>
+
 
 
 
 <br>
 <p class="lead">Do you live by the company values?</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="question2" id="inputGroupSelect02" >
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
-
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect02">Your Score</label>
-  </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question2" id="inlineRadio1" value="1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question2" id="inlineRadio2" value="2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question2" id="inlineRadio3" value="3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question2" id="inlineRadio4" value="4">
+  <label class="form-check-label" for="inlineRadio4">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question2" id="inlineRadio5" value="5">
+  <label class="form-check-label" for="inlineRadio5">5</label>
 </div>
 
 <br>
-<p class="lead">Believe your team acts ethically?</p>
-<div class="input-group mb-3">
-  <select class="custom-select" name="question3" id="inputGroupSelect03" >
-    <option selected>Choose...</option>
-    <option value="1">1</option>
-    <option value="2">2</option>
-    <option value="3">3</option>
-    <option value="4">4</option>
-    <option value="5">5</option>
 
-  </select>
-  <div class="input-group-append">
-    <label class="input-group-text" for="inputGroupSelect03">Your Score</label>
-  </div>
+
+<br>
+<p class="lead">Believe your team acts ethically?</p>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question3" id="inlineRadio1" value="1">
+  <label class="form-check-label" for="inlineRadio1">1</label>
 </div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question3" id="inlineRadio2" value="2">
+  <label class="form-check-label" for="inlineRadio2">2</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question3" id="inlineRadio3" value="3">
+  <label class="form-check-label" for="inlineRadio3">3</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question3" id="inlineRadio4" value="4">
+  <label class="form-check-label" for="inlineRadio4">4</label>
+</div>
+<div class="form-check form-check-inline">
+  <input class="form-check-input" type="radio" name="question3" id="inlineRadio5" value="5">
+  <label class="form-check-label" for="inlineRadio5">5</label>
+</div>
+
+<br>
 
 </center>
 </div>
 </div>
+
 <!-- END OF ITEM -->
 
 <div class="alert alert-success" role="alert">
