redirect working on form

--- a/x1.html
+++ b/x1.html
@@ -818,10 +818,12 @@
             </label>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button onclick="window.location.href = 'https://www.limitlessmountains.com';" type="submit" class="btn btn-primary" value="Submit request">Submit</button>
 
 
     </p>
+
+
   </form>
 
   <!-- End of form -->
