--- a/x1.html
+++ b/x1.html
@@ -36,7 +36,7 @@
 
     <form id="contactForm">
       <!-- Hidden Values Team  -->
-      <input type="hidden" id="team" name="team" value=["X2","Jims_team">
+      <input type="hidden" id="team" name="team" value="X2","Jims_team">
 
 
 <!-- START OF ITEM -->
@@ -80,10 +80,7 @@
           </div>
 
 
-          <div class="form-group ">
-                <label for="inputEmail4">Phone</label>
-                <input type="tel" name="tel" id="tel" class="form-control" id="inputPhone1" placeholder="Mobile Number">
-              </div>
+    
     </div>
     <div class="col-sm">
     </div>
@@ -835,7 +832,6 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
     <script src="form_main.js"></script>
-    <script src="text.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
