Revert "This form is working"
This reverts commit 9be1cbb75b6456d670dadc22b9bfbfdfa08fc760.

--- a/x1.html
+++ b/x1.html
@@ -36,7 +36,7 @@
 
     <form id="contactForm">
       <!-- Hidden Values Team  -->
-      <input type="hidden" id="team" name="team" value=["X4","Oaknorth">
+      <input type="hidden" id="team" name="team" value=["X1","Oaknorth">
 
 
 <!-- START OF ITEM -->
@@ -818,7 +818,7 @@
             </label>
           </div>
         </div>
-        <button onclick="window.location.href = 'https://www.limitlessmountains.com';" type="submit" class="btn btn-primary" value="Submit request">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
 
 
     </p>
