X4 Working on local machine

--- a/X4.html
+++ b/X4.html
@@ -36,7 +36,7 @@
 
     <form id="contactForm">
       <!-- Hidden Values Team  -->
-      <input type="hidden" id="team" name="team" value="X2","Jims_team">
+      <input type="hidden" id="team" name="team" value="X4","Oaknorth">
 
 
 <!-- START OF ITEM -->
@@ -80,7 +80,10 @@
           </div>
 
 
-    
+          <div class="form-group ">
+                <label for="inputEmail4">Phone</label>
+                <input type="tel" name="tel" id="tel" class="form-control" id="inputPhone1" placeholder="Mobile Number">
+              </div>
     </div>
     <div class="col-sm">
     </div>
@@ -819,8 +822,6 @@
 
 
     </p>
-
-
   </form>
 
   <!-- End of form -->
