--- a/contact.html
+++ b/contact.html
@@ -16,13 +16,13 @@
       <div class="company-info">
         <h3>CONTACT US</h3>
         <ul>
-          <li><i class="fa fa-road"></i> 4 Granary House, Micheldever Stations, Winchester, so21 3fd</li>
+          <li><i class="fa fa-road"></i> 4 Granary House, Micheldever Stations, Winchester, SO213FD</li>
           <li><i class="fa fa-phone"></i> (+44)077387-37884</li>
           <li><i class="fa fa-envelope"></i> team@limitlessmountains.com</li>
         </ul>
       </div>
       <div class="contact">
-        <h3>Email Us</h3>
+        <h3>Your Information</h3>
         <div class="alert">Your message has been sent</div>
         <form id="contactForm">
           <p>
