--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/limitless_intelligence.html">Limitless Intelligence</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="https://www.limitlessmountains.com/contact.html">Contact</a>
           </li>
         </ul>
       </div>
