contact form update

--- a/limitless_intelligence.html
+++ b/limitless_intelligence.html
@@ -143,7 +143,7 @@
 										<p>
 											Trusted by some of the worlds leading organisations Limitless Intelegence can help you quantify your culture, so you can provide investors and customers with a enviromental and social governance report powered by meaningful data.
 										</p>
-										<a href="#contact" </i>Contact Us</a>
+										<a href="https://www.limitlessmountains.com/contact.html" </i>Contact Us</a>
 
 									</div><!-- .section-title end -->
 
