--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,16 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="container">
-    <h1 class="brand"><span>LIMITLESS</span> MOUNTAINS</h1>
+    <a class="logo logo-header" href="https://limitlessmountains.com">
+      <img src="images_2/limitlessmountains.png" alt="Limitless Mountains">
+    </a>
+    <!-- <h1 class="brand"><span>LIMITLESS</span> MOUNTAINS</h1> -->
     <div class="wrapper">
       <div class="company-info">
-        <h3>CONTACT US</h3>
+        <h3>Contact us to learn more about our products and services.</h3>
         <ul>
           <li><i class="fa fa-road"></i> 4 Granary House, Micheldever Stations, Winchester, SO213FD</li>
           <li><i class="fa fa-phone"></i> (+44)077387-37884</li>
@@ -22,7 +26,7 @@
         </ul>
       </div>
       <div class="contact">
-        <h3>Your Information</h3>
+        <h3>Submit your information below to contact us via our webform.</h3>
         <div class="alert">Your message has been sent</div>
         <form id="contactForm">
           <p>
