--- a/limitless_intelligence.html
+++ b/limitless_intelligence.html
@@ -75,6 +75,17 @@
 
 			</div><!-- #header-bar-1 end -->
 
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154525719-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154525719-1');
+</script>
+
+
 		</header><!-- #header end -->
 
 		<!-- Banner
